@@ -221,29 +221,20 @@
       </dependencies>
     </profile>
     <profile>
-      <!-- http://www.yourkit.com/docs/80/help/agent.jsp -->
       <id>yourkit-profile</id>
-
-      <properties>
-        <yourkit.home>C:\Arquivos de programas\YourKit Java Profiler 8.0.13</yourkit.home>
-      </properties>
-
-      <dependencies>
-        <dependency>
-          <groupId>com.yourkit</groupId>
-          <artifactId>yjp</artifactId>
-          <version>8.0.13</version>
-          <scope>system</scope>
-          <systemPath>${yourkit.home}\lib\yjp.jar</systemPath>
-        </dependency>
-      </dependencies>
+      <activation>
+        <property>
+          <name>yourkit.agent</name>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
+            <artifactId>maven-failsafe-plugin</artifactId>
             <configuration>
-              <argLine>-agentpath:"${yourkit.home}\bin\win32\yjpagent.dll"</argLine>
+            <!-- for Yourkit session, we left more memory intentionally -->
+              <argLine>-XX:PermSize=220m -XX:MaxPermSize=220m -Xmx600M -XX:+HeapDumpOnOutOfMemoryError -agentpath:"${yourkit.agent}"</argLine>
             </configuration>
           </plugin>
         </plugins>
